# riscv

./: .gitignore  CMakeLists.txt  Manual.txt  README.md  workspace.code-workspace
Docs/: Pipeline.ods
Firmware/: CMakeLists.txt  Linker.ld  build.bat  cmakelists.txt  crt0.S  csr.h  demo.S  link.ld  main.c  makefile  riscv-toolchain.cmake  test.S
Forth/: makefile
HDL/: Alu.sv  AluForwardController.sv  BranchForwardController.sv  Comparer.sv  Controller.sv  Controller_RV32I.sv  DatapathController.sv  DebugTagGenerator.sv  Decoder_RV32I.sv  EXForwardController.sv  ForwardController.sv  ForwardSwitch.sv  HalfAdder.sv  HazardDetector.sv  IDForwardController.sv  Mux2To1.sv  Mux8To1.sv  PipelineEXMEM.sv  PipelineIDEX.sv  PipelineIFID.sv  PipelineMEMWB.sv  ProcessorPP.sv  ProcessorSC.sv  RdBusInterface.sv  RdWrBusInterface.sv  RegBlock.sv  RegisterFile.sv  Registerx.sv  StageEX.sv  StageID.sv  StageIF.sv  StageMEM.sv  StageWB.sv  StallController.sv  Trace.sv  Types.sv  add.sv  alu.sv  alu.v  alu.vh  (+37 more)
HDL/Base/: Adder.sv  Adder.v  BarrelShifter.sv  Comparator.sv  Comparator32.sv  Comparer.sv  ComparerZero.sv  Counter.sv  FifoSingleClock.sv  FullComparator.sv  FullComparer.sv  GrayCounter.sv  HalfAdder.sv  Memory.sv  Mux2To1.sv  Mux4To1.sv  Mux8To1.sv  Register.sv  RoMemory.sv  RwMemory.sv  Shifter.sv  SyncRam1W2R.sv  Synchronizer.sv
HDL/Core/: BranchAlu.sv  BranchComparer.sv  CSRBlock.sv  CSRUnit.sv  Config.sv  CorePP.sv  CoreSC.sv  DataBus.sv  DataCacheBus.sv  DataCoreBus.sv  DataMemory.sv  DataMemoryAdapter.sv  DataMemoryBus.sv  DatapathController.sv  DebugController.sv  Decoder_RV32I.sv  ForwardController.sv  GPRegisters.sv  GPRegistersBus.sv  HazardDetector.sv  InstBus.sv  InstCacheBus.sv  InstCoreBus.sv  InstDecoder.sv  InstExpander.sv  InstMemory.sv  InstMemoryBus.sv  LoadHazardDetector.sv  MemoryArbiter.sv  PCAlu.sv  Processor.sv  ProcessorPP.sv  ProcessorSC.sv  RV.svh  RegisterBus.sv  RegisterFile.sv  RegistrerCSR.sv  StallController.sv  Types.sv
HDL/Core/ALU/: ALU.sv  Divider.sv  IntegerALU.sv  MultDiv.sv
HDL/Core/Cache/: CacheController.sv  CacheMem.sv  CacheSet.sv  DCache.sv  DCacheController.sv  DataL1Cache.sv  ICache.sv  ICacheController.sv  InstL1Cache.sv  L2Cache.sv
HDL/Core/FPU/: FPU.sv
HDL/Core/MDU/: Divider.sv  Multiplier.sv
HDL/Core/Pipeline/: DebugPipelineEXMEM.sv  DebugPipelineIDEX.sv  DebugPipelineIFID.sv  DebugPipelineMEMWB.sv  PipelineEXMEM.sv  PipelineIDEX.sv  PipelineIFID.sv  PipelineMEMWB.sv
HDL/Core/Stage/: StageEX.sv  StageID.sv  StageID_ForwardController.sv  StageID_HazardDetector.sv  StageIF.sv  StageIF_HazardDetector.sv  StageMEM.sv  StageWB.sv
HDL/GPIO/: GPIO.sv
HDL/Gpio/: GPIO.sv
HDL/Processor/: Config.sv  Processor.sv  ProcessorDefs.sv  RV.svh
HDL/Processor/Cache/: CacheDefs.sv  CacheMem.sv  CacheSet.sv  DCache.sv  DataL1Cache.sv  ICache.sv  InstL1Cache.sv  L2Cache.sv
HDL/Processor/Core/: BranchAlu.sv  BranchComparer.sv  CSRUnit.sv  CoreDefs.sv  CorePP.sv  CoreSC.sv  DataBus.sv  DataMemoryAdapter.sv  DatapathController.sv  DebugController.sv  GPRegisters.sv  InstBus.sv  InstDecoder.sv  InstExpander.sv  MemoryArbiter.sv  StallController.sv
HDL/Processor/Core/ALU/: ALU.sv
HDL/Processor/Core/FPU/: FPU.sv
HDL/Processor/Core/MDU/: Divider.sv  Multiplier.sv
HDL/Processor/Core/Pipeline/: DebugPipelineEXMEM.sv  DebugPipelineIDEX.sv  DebugPipelineIFID.sv  DebugPipelineMEMWB.sv  PipelineEXMEM.sv  PipelineIDEX.sv  PipelineIFID.sv  PipelineMEMWB.sv
HDL/Processor/Core/Stage/: StageEX.sv  StageID.sv  StageID_ForwardController.sv  StageID_HazardDetector.sv  StageIF.sv  StageMEM.sv  StageWB.sv
HDL/UART/: UART.sv  UART_Baud.sv  UART_TX.sv
HDL/UART_/: UART.sv
Quartus/: CPU.qpf  CPU01.qsf  CPU01.qws  CPU01.sdc  CPU01_assignment_defaults.qdf  D0-Nano-Top.v  DataMemory.sv  DataMemory1024x32.sv  DataMemory256x32.sv  InstMemory.sv  Memory.sv  Program.sv  cpu01.qpf  d0nano_top.sv  less32S.qip  less32S.v  less32S_bb.v  less32U.qip  less32U.v  less32U_bb.v  mem.sv  mw_ram.qip  mw_ram.v  mw_ram_bb.v  mw_s32_comparer.qip  mw_s32_comparer.v  mw_s32_comparer_bb.v  mw_u32_comparer.qip  mw_u32_comparer.v  mw_u32_comparer_bb.v  pgm.sv  ram.v  ram1024x8.qip  ram1024x8.v  ram1024x8_bb.v
Run/: run.sh
Run/waves_pp/: alu_op_filter.txt  inst_op_filter.txt  trace.gtkw  wave.bat
Run/waves_sc/: trace.gtkw
Run/waves_tb/: trace.gtkw
Scripts/: build.sh  configure.sh  install.sh  runsim.sh  runtest.sh
Simulator/: CMakeLists.txt  main.cpp
Simulator/Include/: RISCV.h  RISCVMemory.h  RISCVProcessor.h  RISCVSim.h  RISCVTracer.h
Simulator/Source/: RISCVMemory.cpp  RISCVMemoryDpi.cpp  RISCVProcessor.cpp  RISCVSim.cpp  RISCVTracer.cpp  RISCVTracerDpi.cpp  RISCVTracerInfo.cpp
SimulatorBHV/: CMakeLists.txt  main.cpp
SimulatorRTL/: CMakeLists.txt  main.cpp  sim.h  top.sv  verilator_top.sv
Testbench/: CMakeLists.txt  main.cpp  sim.h  simConfig.h  top.sv  verilator_top.sv
Testbench/Base/: tb_Adder.sv
Verilator/: CMakeLists.txt  DataMemory.sv  InstMemory.sv  Makefile_obj  main.cpp  makefile  sim.h  sim_access.cpp  sim_dis.cpp  sim_main.cpp  sim_ram.cpp  sim_rom.cpp  trace.gtkw  verilator_top.sv  verilator_top.v  workspace.code-workspace
Verilator/waves_pp/: inst_op_filter.txt  trace.gtkw  trace.tcl
Verilator/waves_sc/: alu_op_filter.txt  inst_fn_filter.txt  inst_op_filter.txt  trace.gtkw
Yosys/: CMakeLists.txt  cmakelist.txt  makefile  script.yo  script.ys  synth.v
